# DOTO

./: .gitignore  README.md  doto.cabal  stack.yaml
js/: api.d.ts  application.tsx  package.json  tsconfig.json  typings.json  webpack.config.js
src/: App.hs  Config.hs  Models.hs
src/Api/: ActivityList.hs  TodoItem.hs  TodoList.hs  User.hs
static/js/: application.js  minimist.js
static/semantic/: package.json
static/src/: application.ts  application.tsx  package.json  tsconfig.json  typings.json  webpack.config.js
static/templates/: index.html
todo/: 20160628192500.json  20160628192500_history.json
