name:                doto
version:             0.2.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/myuon/DOTO#doto
license:             MIT
license-file:        LICENSE
author:              myuon
maintainer:          ioi.joi.koi.loi@gmail.com
copyright:           2016 myuon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable doto
  hs-source-dirs:      src
  main-is:             App.hs
  other-modules:       Models, Config, Api.TodoItem, Api.TodoList, Api.ActivityList
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , servant-server
                     , servant-ede
                     , servant-docs
                     , wai
                     , warp
                     , mtl
                     , text
                     , bytestring
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , monad-logger
                     , resourcet
                     , mtl
                     , transformers
                     , lens
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite doto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , doto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/myuon/DOTO
